--- a/PaymentCrudApp/src/app/payment-details/payment-details-from/payment-details-from.component.html
+++ b/PaymentCrudApp/src/app/payment-details/payment-details-from/payment-details-from.component.html
@@ -1,4 +1,4 @@
-<form #form="ngform" (submit)="onSubmit(form)" >
+<form #form="ngForm" (submit)="onSubmit(form)" >
   <div class="mb-3">
     <input type="hidden" name="paymentDetailId" [value]="service.formData.paymentDetailId">
     <label>Card Owner Name</label>
