--- a/PaymentCrudApp/src/app/payment-details/payment-details-from/payment-details-from.component.html
+++ b/PaymentCrudApp/src/app/payment-details/payment-details-from/payment-details-from.component.html
@@ -1,18 +1,18 @@
-<form #form="ngForm" (submit)="onSubmit(form)" >
+<form #form="ngForm" (submit)="onSubmit(form)" [class.submitted] = "service.formSubmitted" novalidate autocomplete="off" >
   <div class="mb-3">
     <input type="hidden" name="paymentDetailId" [value]="service.formData.paymentDetailId">
     <label>Card Owner Name</label>
     <input class="form-control form-control-lg"
     placeholder="Name on Card"
     #cardOwnerName="ngModel" name="cardOwnerName"
-    [(ngModel)]="service.formData.cardOwnerName">
+    [(ngModel)]="service.formData.cardOwnerName" required>
   </div>
   <div class="mb-3">
     <label>Card Number</label>
     <input class="form-control form-control-lg"
     placeholder="16 Digit Card Number"
     #cardNumber="ngModel" name="cardNumber"
-    [(ngModel)]="service.formData.cardNumber">
+    [(ngModel)]="service.formData.cardNumber" required maxlength="16" minlength="16">
   </div>
   <div class="row">
     <div class="mb-3 col-6">
@@ -20,14 +20,14 @@
       <input class="form-control form-control-lg"
       placeholder="CVV" type="password"
       #securityCode="ngModel" name="securityCode"
-      [(ngModel)]="service.formData.securityCode">
+      [(ngModel)]="service.formData.securityCode" required minlength="3" maxlength="3">
     </div>
     <div class="mb-3 col-6">
       <label>Valid Through</label>
       <input class="form-control form-control-lg"
       placeholder="MM/YY"
       #expirationDate="ngModel" name="expirationDate"
-      [(ngModel)]="service.formData.expirationDate">
+      [(ngModel)]="service.formData.expirationDate" required minlength="5" maxlength="5">
     </div>
   </div>
   <div class="d-grid">
